k8s/webhook/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
  namespace: lanchonete-app
  labels:
    app: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
    spec:
      containers:
        - name: webhook
          image: juclops/techchallenge-webhook:latest
          ports:
            - containerPort: 8081
