k8s/webhook/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook
  namespace: lanchonete-app
spec:
  selector:
    app: webhook
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
