k8s/webhook/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-ingress
  namespace: lanchonete-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: webhook.techchallenge.local
      http:
        paths:
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: webhook
                port:
                  number: 8081
